# wavenet-softphone

./: README.md  env  pubspec.yaml
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  pjsip_shim.cpp
android/app/src/main/kotlin/com/example/wavenetsoftphone/: MainActivity.kt
android/app/src/main/kotlin/com/wavenet/softphone/: MainActivity.kt
flutter_pjsua2/: README.md  pubspec.yaml
flutter_pjsua2/android/: build.gradle  settings.gradle
flutter_pjsua2/android/src/main/: AndroidManifest.xml
flutter_pjsua2/android/src/main/kotlin/com/wavenet/flutter_pjsua2/: FlutterPjsua2Plugin.kt
flutter_pjsua2/android/src/test/kotlin/com/wavenet/flutter_pjsua2/: FlutterPjsua2PluginTest.kt
flutter_pjsua2/example/: README.md  pubspec.yaml
flutter_pjsua2/example/android/app/: build.gradle.kts
flutter_pjsua2/example/android/app/src/main/: AndroidManifest.xml
flutter_pjsua2/example/android/app/src/main/kotlin/com/wavenet/flutter_pjsua2_example/: MainActivity.kt
flutter_pjsua2/example/integration_test/: plugin_integration_test.dart
flutter_pjsua2/example/lib/: main.dart
flutter_pjsua2/example/test/: widget_test.dart
flutter_pjsua2/lib/: flutter_pjsua2.dart  flutter_pjsua2_method_channel.dart  flutter_pjsua2_platform_interface.dart
flutter_pjsua2/test/: flutter_pjsua2_method_channel_test.dart  flutter_pjsua2_test.dart
ios/: Podfile
ios/Runner/: AppDelegate.swift  Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: global_keys.dart  main.dart  pjsip_bridge.dart
lib/screens/: about_screen.dart  call_screen.dart  incoming_callscreen.dart  keypad_screen.dart  login_screen.dart  recent_call_screen.dart  settings_screen.dart  sip_account_screen.dart  voicemail_screen.dart
lib/services/: background_service.dart  callkit_service.dart  notification_service.dart  voip_push_service.dart
lib/state/: call_state.dart
lib/widgets/: active_call_floating_widget.dart  numpad.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
